@@ -13,6 +13,7 @@ fixed bugs:
 - fixed wrong cast in LP iteration limit computation in proximity search heuristic
 - fixed check for time limit in heur_nlpdiving
 - improved numerics and fixed stop criterion in zirounding heuristic
+- fixed treatment of variable aggregations in knapsack constraint handler that led to wrong propagations
 
 
 SCIP version 5.0.0
